# otel-ebpf-profiler-operator

./: pyproject.toml  tox.ini
.github/workflows/: pull-request.yaml
tests/integration/: conftest.py  test_colocated_profilers.py  test_profiling_integration.py  test_profiling_integration_tls.py  test_self_monitoring.py
tests/terraform/: test_terraform_module.py
