# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "otel-ebpf-profiler"
version = "0.1"
requires-python = "~=3.12.0"

dependencies = [
  "ops[tracing]",
  "pyyaml",   # required by config manager
  "urllib3",  # required by snap charmlib
  "cosl",     # we use jujutopology and reconciler
  "pydantic", # we use it in our charm libs
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  # Integration
  "pytest-jubilant>=2,<3",
  "ops[testing]",
  "jubilant",
  "tenacity",
  "pytest-bdd",
]

# Testing tools configuration
[tool.coverage.run]
branch = true
omit = [
  "lib/*",
]

[tool.coverage.report]
show_missing = true

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W505", "E501", "D107", "C901", "N818", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
extraPaths = ["src", "lib"]
pythonVersion = "3.12"
pythonPlatform = "All"

[tool.pytest.ini_options]
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"